--- a/@alcohol.css
+++ b/@alcohol.css
@@ -37,6 +37,12 @@ a {
   border-style: ridge;
   border-width: 5px;
   background-color: white;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 canvas {
   z-index: -1;
